src/objects/Qualtrics_API_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>used to store each user&apos;s Qualtrics settings for API calls</description>
    <fields>
        <fullName>API_Token__c</fullName>
        <label>API Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Has_Vocalize_Permission__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Vocalize Permission</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Qualtrics_Is_Connected__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Qualtrics Is Connected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Id__c</fullName>
        <description>Used as the Library Id in Qualtrics REST API calls</description>
        <label>User Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>The Qualtrics user name, required for all REST API requests</description>
        <label>User Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Qualtrics API Settings</label>
</CustomObject>